# OpenXenos

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  install.sh  openxenos.service  pyproject.toml
openxenos/: __init__.py  client.py  config.py  deliberation.py  schemas.py  server.py
