[project]
name = "openxenos"
version = "0.1.0"
description = "Multi-model deliberation without a judge — Anthropic Messages API compatible"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
openxenos = "openxenos.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# OpenXenos reads ANTHROPIC_BASE_URL, ANTHROPIC_AUTH_TOKEN, ANTHROPIC_MODEL from env.
# Claude Code points its Anthropic base_url to http://localhost:8787/v1.
